Fix sandbox JVM tasks